--- a/dev/deps/spark-deps-hadoop-2.7-hive-1.2
+++ b/dev/deps/spark-deps-hadoop-2.7-hive-1.2
@@ -25,18 +25,23 @@ automaton/1.11-8//automaton-1.11-8.jar
 avro-ipc/1.8.2//avro-ipc-1.8.2.jar
 avro-mapred/1.8.2/hadoop2/avro-mapred-1.8.2-hadoop2.jar
 avro/1.8.2//avro-1.8.2.jar
+aws-java-sdk-bundle/1.11.201//aws-java-sdk-bundle-1.11.201.jar
+azure-data-lake-store-sdk/2.2.3//azure-data-lake-store-sdk-2.2.3.jar
+azure-keyvault-core/0.8.0//azure-keyvault-core-0.8.0.jar
+azure-storage/5.4.0//azure-storage-5.4.0.jar
 bonecp/0.8.0.RELEASE//bonecp-0.8.0.RELEASE.jar
 breeze-macros_2.12/1.0//breeze-macros_2.12-1.0.jar
 breeze_2.12/1.0//breeze_2.12-1.0.jar
 cats-kernel_2.12/2.0.0-M4//cats-kernel_2.12-2.0.0-M4.jar
 chill-java/0.9.5//chill-java-0.9.5.jar
 chill_2.12/0.9.5//chill_2.12-0.9.5.jar
-commons-beanutils/1.9.4//commons-beanutils-1.9.4.jar
+classmate/1.1.0//classmate-1.1.0.jar
+commons-beanutils/1.9.3//commons-beanutils-1.9.3.jar
 commons-cli/1.2//commons-cli-1.2.jar
 commons-codec/1.10//commons-codec-1.10.jar
 commons-collections/3.2.2//commons-collections-3.2.2.jar
 commons-compiler/3.0.16//commons-compiler-3.0.16.jar
-commons-compress/1.8.1//commons-compress-1.8.1.jar
+commons-compress/1.18//commons-compress-1.18.jar
 commons-configuration/1.6//commons-configuration-1.6.jar
 commons-crypto/1.0.0//commons-crypto-1.0.0.jar
 commons-dbcp/1.4//commons-dbcp-1.4.jar
@@ -45,12 +50,12 @@ commons-httpclient/3.1//commons-httpclient-3.1.jar
 commons-io/2.4//commons-io-2.4.jar
 commons-lang/2.6//commons-lang-2.6.jar
 commons-lang3/3.9//commons-lang3-3.9.jar
-commons-logging/1.1.3//commons-logging-1.1.3.jar
-commons-math3/3.4.1//commons-math3-3.4.1.jar
-commons-net/3.1//commons-net-3.1.jar
-commons-pool/1.5.4//commons-pool-1.5.4.jar
+commons-logging/1.2//commons-logging-1.2.jar
+commons-math3/3.6.1//commons-math3-3.6.1.jar
+commons-net/3.6//commons-net-3.6.jar
+commons-pool/1.6//commons-pool-1.6.jar
 commons-text/1.6//commons-text-1.6.jar
-compress-lzf/1.0.3//compress-lzf-1.0.3.jar
+compress-lzf/1.0.4//compress-lzf-1.0.4.jar
 core/1.1.2//core-1.1.2.jar
 curator-client/2.7.1//curator-client-2.7.1.jar
 curator-framework/2.7.1//curator-framework-2.7.1.jar
@@ -59,46 +64,65 @@ datanucleus-api-jdo/3.2.6//datanucleus-api-jdo-3.2.6.jar
 datanucleus-core/3.2.10//datanucleus-core-3.2.10.jar
 datanucleus-rdbms/3.2.9//datanucleus-rdbms-3.2.9.jar
 derby/10.12.1.1//derby-10.12.1.1.jar
+dropwizard-jackson/1.0.0//dropwizard-jackson-1.0.0.jar
+dropwizard-lifecycle/1.0.0//dropwizard-lifecycle-1.0.0.jar
+dropwizard-metrics-influxdb/1.2.2//dropwizard-metrics-influxdb-1.2.2.jar
+dropwizard-metrics/1.0.0//dropwizard-metrics-1.0.0.jar
+dropwizard-util/1.0.0//dropwizard-util-1.0.0.jar
+dropwizard-validation/1.0.0//dropwizard-validation-1.0.0.jar
+ehcache/3.3.1//ehcache-3.3.1.jar
 flatbuffers-java/1.9.0//flatbuffers-java-1.9.0.jar
 generex/1.0.2//generex-1.0.2.jar
+geronimo-jcache_1.0_spec/1.0-alpha-1//geronimo-jcache_1.0_spec-1.0-alpha-1.jar
 gson/2.2.4//gson-2.2.4.jar
 guava/14.0.1//guava-14.0.1.jar
 guice-servlet/3.0//guice-servlet-3.0.jar
 guice/3.0//guice-3.0.jar
-hadoop-annotations/2.7.4//hadoop-annotations-2.7.4.jar
-hadoop-auth/2.7.4//hadoop-auth-2.7.4.jar
-hadoop-client/2.7.4//hadoop-client-2.7.4.jar
-hadoop-common/2.7.4//hadoop-common-2.7.4.jar
-hadoop-hdfs/2.7.4//hadoop-hdfs-2.7.4.jar
-hadoop-mapreduce-client-app/2.7.4//hadoop-mapreduce-client-app-2.7.4.jar
-hadoop-mapreduce-client-common/2.7.4//hadoop-mapreduce-client-common-2.7.4.jar
-hadoop-mapreduce-client-core/2.7.4//hadoop-mapreduce-client-core-2.7.4.jar
-hadoop-mapreduce-client-jobclient/2.7.4//hadoop-mapreduce-client-jobclient-2.7.4.jar
-hadoop-mapreduce-client-shuffle/2.7.4//hadoop-mapreduce-client-shuffle-2.7.4.jar
-hadoop-yarn-api/2.7.4//hadoop-yarn-api-2.7.4.jar
-hadoop-yarn-client/2.7.4//hadoop-yarn-client-2.7.4.jar
-hadoop-yarn-common/2.7.4//hadoop-yarn-common-2.7.4.jar
-hadoop-yarn-server-common/2.7.4//hadoop-yarn-server-common-2.7.4.jar
-hadoop-yarn-server-web-proxy/2.7.4//hadoop-yarn-server-web-proxy-2.7.4.jar
+hadoop-annotations/2.9.2-palantir.10//hadoop-annotations-2.9.2-palantir.10.jar
+hadoop-auth/2.9.2-palantir.10//hadoop-auth-2.9.2-palantir.10.jar
+hadoop-aws/2.9.2-palantir.10//hadoop-aws-2.9.2-palantir.10.jar
+hadoop-azure-datalake/2.9.2-palantir.10//hadoop-azure-datalake-2.9.2-palantir.10.jar
+hadoop-azure/2.9.2-palantir.10//hadoop-azure-2.9.2-palantir.10.jar
+hadoop-client/2.9.2-palantir.10//hadoop-client-2.9.2-palantir.10.jar
+hadoop-common/2.9.2-palantir.10//hadoop-common-2.9.2-palantir.10.jar
+hadoop-hdfs-client/2.9.2-palantir.10//hadoop-hdfs-client-2.9.2-palantir.10.jar
+hadoop-mapreduce-client-app/2.9.2-palantir.10//hadoop-mapreduce-client-app-2.9.2-palantir.10.jar
+hadoop-mapreduce-client-common/2.9.2-palantir.10//hadoop-mapreduce-client-common-2.9.2-palantir.10.jar
+hadoop-mapreduce-client-core/2.9.2-palantir.10//hadoop-mapreduce-client-core-2.9.2-palantir.10.jar
+hadoop-mapreduce-client-jobclient/2.9.2-palantir.10//hadoop-mapreduce-client-jobclient-2.9.2-palantir.10.jar
+hadoop-mapreduce-client-shuffle/2.9.2-palantir.10//hadoop-mapreduce-client-shuffle-2.9.2-palantir.10.jar
+hadoop-openstack/2.9.2-palantir.10//hadoop-openstack-2.9.2-palantir.10.jar
+hadoop-yarn-api/2.9.2-palantir.10//hadoop-yarn-api-2.9.2-palantir.10.jar
+hadoop-yarn-client/2.9.2-palantir.10//hadoop-yarn-client-2.9.2-palantir.10.jar
+hadoop-yarn-common/2.9.2-palantir.10//hadoop-yarn-common-2.9.2-palantir.10.jar
+hadoop-yarn-registry/2.9.2-palantir.10//hadoop-yarn-registry-2.9.2-palantir.10.jar
+hadoop-yarn-server-common/2.9.2-palantir.10//hadoop-yarn-server-common-2.9.2-palantir.10.jar
+hadoop-yarn-server-web-proxy/2.9.2-palantir.10//hadoop-yarn-server-web-proxy-2.9.2-palantir.10.jar
+hibernate-validator/5.2.4.Final//hibernate-validator-5.2.4.Final.jar
 hk2-api/2.6.1//hk2-api-2.6.1.jar
 hk2-locator/2.6.1//hk2-locator-2.6.1.jar
 hk2-utils/2.6.1//hk2-utils-2.6.1.jar
-htrace-core/3.1.0-incubating//htrace-core-3.1.0-incubating.jar
+htrace-core4/4.1.0-incubating//htrace-core4-4.1.0-incubating.jar
 httpclient/4.5.6//httpclient-4.5.6.jar
 httpcore/4.4.12//httpcore-4.4.12.jar
 istack-commons-runtime/3.0.8//istack-commons-runtime-3.0.8.jar
 ivy/2.4.0//ivy-2.4.0.jar
-jackson-annotations/2.10.0//jackson-annotations-2.10.0.jar
+jackson-annotations/2.11.0//jackson-annotations-2.11.0.jar
 jackson-core-asl/1.9.13//jackson-core-asl-1.9.13.jar
-jackson-core/2.10.0//jackson-core-2.10.0.jar
-jackson-databind/2.10.0//jackson-databind-2.10.0.jar
-jackson-dataformat-yaml/2.10.0//jackson-dataformat-yaml-2.10.0.jar
-jackson-datatype-jsr310/2.10.3//jackson-datatype-jsr310-2.10.3.jar
+jackson-core/2.11.0//jackson-core-2.11.0.jar
+jackson-databind/2.11.0//jackson-databind-2.11.0.jar
+jackson-dataformat-cbor/2.11.0//jackson-dataformat-cbor-2.11.0.jar
+jackson-dataformat-yaml/2.11.0//jackson-dataformat-yaml-2.11.0.jar
+jackson-datatype-guava/2.11.0//jackson-datatype-guava-2.11.0.jar
+jackson-datatype-jdk8/2.11.0//jackson-datatype-jdk8-2.11.0.jar
+jackson-datatype-joda/2.11.0//jackson-datatype-joda-2.11.0.jar
+jackson-datatype-jsr310/2.11.0//jackson-datatype-jsr310-2.11.0.jar
 jackson-jaxrs/1.9.13//jackson-jaxrs-1.9.13.jar
 jackson-mapper-asl/1.9.13//jackson-mapper-asl-1.9.13.jar
-jackson-module-jaxb-annotations/2.10.0//jackson-module-jaxb-annotations-2.10.0.jar
-jackson-module-paranamer/2.10.0//jackson-module-paranamer-2.10.0.jar
-jackson-module-scala_2.12/2.10.0//jackson-module-scala_2.12-2.10.0.jar
+jackson-module-afterburner/2.11.0//jackson-module-afterburner-2.11.0.jar
+jackson-module-jaxb-annotations/2.11.0//jackson-module-jaxb-annotations-2.11.0.jar
+jackson-module-paranamer/2.11.0//jackson-module-paranamer-2.11.0.jar
+jackson-module-scala_2.12/2.11.0//jackson-module-scala_2.12-2.11.0.jar
 jackson-xc/1.9.13//jackson-xc-1.9.13.jar
 jakarta.activation-api/1.2.1//jakarta.activation-api-1.2.1.jar
 jakarta.annotation-api/1.3.5//jakarta.annotation-api-1.3.5.jar
@@ -108,11 +132,15 @@ jakarta.ws.rs-api/2.1.6//jakarta.ws.rs-api-2.1.6.jar
 jakarta.xml.bind-api/2.3.2//jakarta.xml.bind-api-2.3.2.jar
 janino/3.0.16//janino-3.0.16.jar
 javassist/3.25.0-GA//javassist-3.25.0-GA.jar
+javax.annotation-api/1.3.2//javax.annotation-api-1.3.2.jar
+javax.el/3.0.0//javax.el-3.0.0.jar
 javax.inject/1//javax.inject-1.jar
 javax.servlet-api/3.1.0//javax.servlet-api-3.1.0.jar
 javolution/5.5.1//javolution-5.5.1.jar
 jaxb-api/2.2.2//jaxb-api-2.2.2.jar
 jaxb-runtime/2.3.2//jaxb-runtime-2.3.2.jar
+jboss-logging/3.2.1.Final//jboss-logging-3.2.1.Final.jar
+jcip-annotations/1.0-1//jcip-annotations-1.0-1.jar
 jcl-over-slf4j/1.7.30//jcl-over-slf4j-1.7.30.jar
 jdo-api/3.0.1//jdo-api-3.0.1.jar
 jersey-client/2.30//jersey-client-2.30.jar
@@ -124,19 +152,22 @@ jersey-media-jaxb/2.30//jersey-media-jaxb-2.30.jar
 jersey-server/2.30//jersey-server-2.30.jar
 jetty-sslengine/6.1.26//jetty-sslengine-6.1.26.jar
 jetty-util/6.1.26//jetty-util-6.1.26.jar
+jetty-util/9.4.18.v20190429//jetty-util-9.4.18.v20190429.jar
 jetty/6.1.26//jetty-6.1.26.jar
 jline/2.14.6//jline-2.14.6.jar
 joda-time/2.10.5//joda-time-2.10.5.jar
 jodd-core/3.5.2//jodd-core-3.5.2.jar
 jpam/1.1//jpam-1.1.jar
+json-smart/1.3.1//json-smart-1.3.1.jar
 json4s-ast_2.12/3.6.6//json4s-ast_2.12-3.6.6.jar
 json4s-core_2.12/3.6.6//json4s-core_2.12-3.6.6.jar
 json4s-jackson_2.12/3.6.6//json4s-jackson_2.12-3.6.6.jar
 json4s-scalap_2.12/3.6.6//json4s-scalap_2.12-3.6.6.jar
 jsp-api/2.1//jsp-api-2.1.jar
-jsr305/3.0.0//jsr305-3.0.0.jar
+jsr305/3.0.2//jsr305-3.0.2.jar
 jta/1.1//jta-1.1.jar
 jul-to-slf4j/1.7.30//jul-to-slf4j-1.7.30.jar
+kafka-clients/2.4.1//kafka-clients-2.4.1.jar
 kryo-shaded/4.0.2//kryo-shaded-4.0.2.jar
 kubernetes-client/4.9.2//kubernetes-client-4.9.2.jar
 kubernetes-model-common/4.9.2//kubernetes-model-common-4.9.2.jar
@@ -145,20 +176,22 @@ leveldbjni-all/1.8//leveldbjni-all-1.8.jar
 libfb303/0.9.3//libfb303-0.9.3.jar
 libthrift/0.12.0//libthrift-0.12.0.jar
 log4j/1.2.17//log4j-1.2.17.jar
-logging-interceptor/3.12.6//logging-interceptor-3.12.6.jar
+logging-interceptor/3.11.0//logging-interceptor-3.11.0.jar
 lz4-java/1.7.1//lz4-java-1.7.1.jar
 machinist_2.12/0.6.8//machinist_2.12-0.6.8.jar
 macro-compat_2.12/1.1.1//macro-compat_2.12-1.1.1.jar
 mesos/1.4.0/shaded-protobuf/mesos-1.4.0-shaded-protobuf.jar
-metrics-core/4.1.1//metrics-core-4.1.1.jar
-metrics-graphite/4.1.1//metrics-graphite-4.1.1.jar
-metrics-jmx/4.1.1//metrics-jmx-4.1.1.jar
-metrics-json/4.1.1//metrics-json-4.1.1.jar
-metrics-jvm/4.1.1//metrics-jvm-4.1.1.jar
+metrics-core/3.2.6//metrics-core-3.2.6.jar
+metrics-graphite/3.2.6//metrics-graphite-3.2.6.jar
+metrics-influxdb/1.2.2//metrics-influxdb-1.2.2.jar
+metrics-json/3.2.6//metrics-json-3.2.6.jar
+metrics-jvm/3.2.6//metrics-jvm-3.2.6.jar
 minlog/1.3.0//minlog-1.3.0.jar
 netty-all/4.1.47.Final//netty-all-4.1.47.Final.jar
-objenesis/2.5.1//objenesis-2.5.1.jar
-okhttp/3.12.6//okhttp-3.12.6.jar
+nimbus-jose-jwt/4.41.1//nimbus-jose-jwt-4.41.1.jar
+objenesis/2.6//objenesis-2.6.jar
+okhttp/2.7.5//okhttp-2.7.5.jar
+okhttp/3.11.0//okhttp-3.11.0.jar
 okio/1.15.0//okio-1.15.0.jar
 opencsv/2.3//opencsv-2.3.jar
 orc-core/1.5.10/nohive/orc-core-1.5.10-nohive.jar
@@ -167,16 +200,17 @@ orc-shims/1.5.10//orc-shims-1.5.10.jar
 oro/2.0.8//oro-2.0.8.jar
 osgi-resource-locator/1.0.3//osgi-resource-locator-1.0.3.jar
 paranamer/2.8//paranamer-2.8.jar
-parquet-column/1.10.1//parquet-column-1.10.1.jar
-parquet-common/1.10.1//parquet-common-1.10.1.jar
-parquet-encoding/1.10.1//parquet-encoding-1.10.1.jar
-parquet-format/2.4.0//parquet-format-2.4.0.jar
+parquet-column/1.12.0-palantir.7//parquet-column-1.12.0-palantir.7.jar
+parquet-common/1.12.0-palantir.7//parquet-common-1.12.0-palantir.7.jar
+parquet-encoding/1.12.0-palantir.7//parquet-encoding-1.12.0-palantir.7.jar
+parquet-format-structures/1.12.0-palantir.7//parquet-format-structures-1.12.0-palantir.7.jar
 parquet-hadoop-bundle/1.6.0//parquet-hadoop-bundle-1.6.0.jar
-parquet-hadoop/1.10.1//parquet-hadoop-1.10.1.jar
-parquet-jackson/1.10.1//parquet-jackson-1.10.1.jar
+parquet-hadoop/1.12.0-palantir.7//parquet-hadoop-1.12.0-palantir.7.jar
+parquet-jackson/1.12.0-palantir.7//parquet-jackson-1.12.0-palantir.7.jar
 protobuf-java/2.5.0//protobuf-java-2.5.0.jar
 py4j/0.10.9//py4j-0.10.9.jar
 pyrolite/4.30//pyrolite-4.30.jar
+safe-logging/1.5.1//safe-logging-1.5.1.jar
 scala-collection-compat_2.12/2.1.1//scala-collection-compat_2.12-2.1.1.jar
 scala-compiler/2.12.10//scala-compiler-2.12.10.jar
 scala-library/2.12.10//scala-library-2.12.10.jar
@@ -187,7 +221,7 @@ shapeless_2.12/2.3.3//shapeless_2.12-2.3.3.jar
 shims/0.7.45//shims-0.7.45.jar
 slf4j-api/1.7.30//slf4j-api-1.7.30.jar
 slf4j-log4j12/1.7.30//slf4j-log4j12-1.7.30.jar
-snakeyaml/1.24//snakeyaml-1.24.jar
+snakeyaml/1.26//snakeyaml-1.26.jar
 snappy-java/1.1.7.5//snappy-java-1.1.7.5.jar
 snappy/0.2//snappy-0.2.jar
 spire-macros_2.12/0.17.0-M1//spire-macros_2.12-0.17.0-M1.jar
@@ -196,16 +230,18 @@ spire-util_2.12/0.17.0-M1//spire-util_2.12-0.17.0-M1.jar
 spire_2.12/0.17.0-M1//spire_2.12-0.17.0-M1.jar
 stax-api/1.0-2//stax-api-1.0-2.jar
 stax-api/1.0.1//stax-api-1.0.1.jar
+stax2-api/3.1.4//stax2-api-3.1.4.jar
 stream/2.9.6//stream-2.9.6.jar
 stringtemplate/3.2.1//stringtemplate-3.2.1.jar
 super-csv/2.2.0//super-csv-2.2.0.jar
 threeten-extra/1.5.0//threeten-extra-1.5.0.jar
 univocity-parsers/2.8.3//univocity-parsers-2.8.3.jar
+validation-api/1.1.0.Final//validation-api-1.1.0.Final.jar
+wildfly-openssl/1.0.7.Final//wildfly-openssl-1.0.7.Final.jar
+woodstox-core/5.0.3//woodstox-core-5.0.3.jar
 xbean-asm7-shaded/4.15//xbean-asm7-shaded-4.15.jar
-xercesImpl/2.12.0//xercesImpl-2.12.0.jar
-xml-apis/1.4.01//xml-apis-1.4.01.jar
 xmlenc/0.52//xmlenc-0.52.jar
-xz/1.5//xz-1.5.jar
+xz/1.8//xz-1.8.jar
 zjsonpatch/0.3.0//zjsonpatch-0.3.0.jar
 zookeeper/3.4.14//zookeeper-3.4.14.jar
 zstd-jni/1.4.4-3//zstd-jni-1.4.4-3.jar
